--- a/packages/dice-roller/src/Dice/Dice.scss
+++ b/packages/dice-roller/src/Dice/Dice.scss
@@ -2,7 +2,7 @@
 	width: 50px;
 	height: 50px;
 
-	display: flex;
+	display: inline-block;
 	justify-content: center;
 	align-items: center;
 
@@ -10,7 +10,12 @@
 	
 	border-radius: 5px;
 
+	position: relative;
+
 	img {
+		position: absolute;
+		left: 5px;
+		top: 5px;
 		width: 40px;
 		height: 40px;
 	}
